@@ -5,26 +5,33 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.google.common.collect.Lists;
 import com.xzf.blog.article.biz.constant.RedisConstant;
 import com.xzf.blog.article.biz.convert.ArticleConvert;
+import com.xzf.blog.article.biz.convert.UserConvert;
 import com.xzf.blog.article.biz.domain.dataobject.*;
 import com.xzf.blog.article.biz.domain.mapper.*;
 import com.xzf.blog.article.biz.enums.ArticleIsTopEnum;
 import com.xzf.blog.article.biz.exception.BizResponseCodeEnum;
+import com.xzf.blog.article.biz.rpc.UserFeignService;
 import com.xzf.blog.article.dto.response.article.FindCategoryListRspVO;
 import com.xzf.blog.article.dto.response.article.FindIndexArticlePageListRspVO;
 import com.xzf.blog.article.biz.service.ArticleService;
 import com.xzf.blog.article.biz.util.MarkdownHelper;
 import com.xzf.blog.article.biz.util.MarkdownStatsUtil;
 import com.xzf.blog.article.constants.MQConstants;
-import com.xzf.blog.article.dto.IdsRequest;
+import com.xzf.blog.article.dto.request.IdsRequest;
 import com.xzf.blog.article.dto.mq.ArticleMessage;
 import com.xzf.blog.article.dto.request.article.*;
 import com.xzf.blog.article.dto.response.article.FindArticleDetailRspVO;
 import com.xzf.blog.article.dto.response.tag.FindTagListRspVO;
+import com.xzf.blog.article.dto.vo.UserInfoVO;
+import com.xzf.blog.framework.commons.enums.ResponseCodeEnum;
+import com.xzf.blog.framework.commons.enums.RoleEnums;
 import com.xzf.blog.framework.commons.exception.BizException;
 import com.xzf.blog.framework.commons.response.PageResponse;
 import com.xzf.blog.framework.commons.response.Response;
 import com.xzf.blog.framework.commons.util.JsonUtils;
+import com.xzf.blog.user.dto.resp.FindUserByIdResponse;
 import com.xzf.framework.biz.context.holder.LoginUserContextHolder;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.rocketmq.client.producer.SendCallback;
 import org.apache.rocketmq.client.producer.SendResult;
@@ -42,6 +49,7 @@ import javax.annotation.Resource;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -67,6 +75,8 @@ public class ArticleServiceImpl implements ArticleService {
     private RedisTemplate<String, Object> redisTemplate;
     @Resource(name = "taskExecutor")
     private ThreadPoolTaskExecutor threadPoolTaskExecutor;
+    @Autowired
+    private UserFeignService userFeignService;
 
     private static Integer DETAIL_CACHE_TIMEOUT_MINUTES = 60;
     private static Integer PAGE_CACHE_TIMEOUT_MINUTES = 60;
@@ -140,15 +150,14 @@ public class ArticleServiceImpl implements ArticleService {
                 log.error("==> 【文章服务：发布文章】MQ 发送异常: ", throwable);
             }
         });
-        threadPoolTaskExecutor.execute(() -> {
-            deletePageListCache();
-        });
+        threadPoolTaskExecutor.execute(this::deletePageListCache);
 
         return Response.success();
     }
 
 
     @Override
+    @SneakyThrows
     public PageResponse<FindIndexArticlePageListRspVO> findArticlePageList(FindIndexArticlePageListReqVO findIndexArticlePageListReqVO) {
         // ========== 缓存逻辑 start ==========
         // 生成缓存 key（将请求序列化的指纹作为 key）
@@ -214,7 +223,7 @@ public class ArticleServiceImpl implements ArticleService {
         if ((hasTagCondition || hasCategoryCondition) && filteredArticleIds.isEmpty()) {
             // ========== 空结果也缓存，防止缓存穿透 ==========
             PageResponse<FindIndexArticlePageListRspVO> emptyResponse = PageResponse.success(null, null);
-            asyncLoadPageCache(pageCacheKey, JsonUtils.toJsonString(emptyResponse), PAGE_CACHE_TIMEOUT_MINUTES);
+            asyncLoadPageCache(pageCacheKey, JsonUtils.toJsonString(emptyResponse), 1);
             return emptyResponse;
         }
 
@@ -228,10 +237,13 @@ public class ArticleServiceImpl implements ArticleService {
 
         List<FindIndexArticlePageListRspVO> vos = null;
         if (!CollectionUtils.isEmpty(articleDOS)) {
-            // 文章 DO 转 VO
-            vos = articleDOS.stream()
-                    .map(ArticleConvert.INSTANCE::convertDO2VO)
-                    .collect(Collectors.toList());
+            CompletableFuture<Map<Long, UserInfoVO>> userInfoFuture = CompletableFuture.supplyAsync(() -> {
+                List<Long> authorIds = articleDOS.stream()
+                        .map(ArticleDO::getAuthorId)
+                        .toList();
+                return getUserInfoVOMap(authorIds);
+            }, threadPoolTaskExecutor);
+
 
             // 拿到所有文章的 ID 集合
             List<Long> articleIds = articleDOS.stream().map(ArticleDO::getId).collect(Collectors.toList());
@@ -246,6 +258,16 @@ public class ArticleServiceImpl implements ArticleService {
                 // 根据文章 ID 批量查询所有关联记录
                 articleCategoryRelDOS = articleCategoryRelMapper.selectByArticleIds(articleIds);
             }
+
+            Map<Long, UserInfoVO> userInfoMap = userInfoFuture.get(5, TimeUnit.SECONDS);
+            // 文章 DO 转 VO
+            vos = articleDOS.stream()
+                    .map(articleDO -> {
+                        FindIndexArticlePageListRspVO articleVO = ArticleConvert.INSTANCE.convertDO2VO(articleDO);
+                        articleVO.setAuthorInfo(userInfoMap.get(articleDO.getAuthorId()));
+                        return articleVO;
+                    })
+                    .collect(Collectors.toList());
 
             for (FindIndexArticlePageListRspVO vo : vos) {
                 Long currArticleId = vo.getId();
@@ -278,6 +300,7 @@ public class ArticleServiceImpl implements ArticleService {
             if (!hasTagCondition) {
                 articleTagRelDOS = articleTagRelMapper.selectByArticleIds(articleIds);
             }
+
             for (FindIndexArticlePageListRspVO vo : vos) {
                 Long currArticleId = vo.getId();
                 // 过滤出当前文章的标签关联记录
@@ -320,6 +343,18 @@ public class ArticleServiceImpl implements ArticleService {
         });
 
         return result;
+    }
+
+    private Map<Long, UserInfoVO> getUserInfoVOMap(List<Long> authorIds) {
+        List<FindUserByIdResponse> resps = userFeignService.findByIds(authorIds);
+        if (resps == null) return new HashMap<>();
+        return resps.stream()
+                .map(resp -> UserInfoVO.builder()
+                        .id(resp.getId())
+                        .userName(resp.getUserName())
+                        .avatarUrl(resp.getAvatarUrl())
+                        .build())
+                .collect(Collectors.toMap(UserInfoVO::getId, userInfo -> userInfo, (a, b) -> a));
     }
 
     @Override
@@ -407,6 +442,7 @@ public class ArticleServiceImpl implements ArticleService {
     }
 
     @Override
+    @SneakyThrows
     public Response<FindArticleDetailRspVO> findArticleDetail(FindArticleDetailReqVO findArticleDetailReqVO) {
         Long articleId = findArticleDetailReqVO.getId();
 
@@ -425,6 +461,11 @@ public class ArticleServiceImpl implements ArticleService {
                 asyncLoadCache(redisCacheKey, "null", 5, TimeUnit.SECONDS);
                 throw new BizException(BizResponseCodeEnum.ARTICLE_NOT_FOUND);
             }
+            CompletableFuture<UserInfoVO> userInfoFuture = CompletableFuture.supplyAsync(() -> {
+                Long authorId = articleDO.getAuthorId();
+                Map<Long, UserInfoVO> userInfoVOMap = getUserInfoVOMap(Collections.singletonList(authorId));
+                return userInfoVOMap.get(authorId);
+            }, threadPoolTaskExecutor);
 
             // 查询正文
             ArticleContentDO articleContentDO = articleContentMapper.selectByArticleId(articleId);
@@ -460,6 +501,9 @@ public class ArticleServiceImpl implements ArticleService {
                     .map(tagDO -> FindTagListRspVO.builder().id(tagDO.getId()).name(tagDO.getName()).build())
                     .collect(Collectors.toList());
             vo.setTags(tagVOS);
+
+            UserInfoVO userInfo = userInfoFuture.get(5, TimeUnit.SECONDS);
+            vo.setAuthorInfo(userInfo);
 
             // 异步加载redis缓存
             asyncLoadCache(redisCacheKey, JsonUtils.toJsonString(vo), DETAIL_CACHE_TIMEOUT_MINUTES + new Random().nextInt(DETAIL_CACHE_TIMEOUT_MINUTES), TimeUnit.MINUTES);
@@ -552,10 +596,9 @@ public class ArticleServiceImpl implements ArticleService {
         if (Objects.isNull(articleDO)) {
             throw new BizException(BizResponseCodeEnum.ARTICLE_NOT_FOUND);
         }
-        // TODO:LoginUserContextHolder bug 待修复，暂时排除鉴权
-//        if (!role.equals(RoleEnums.ROOT.getName()) && !articleDO.getAuthorId().equals(userId)) {
-//            throw new BizException(ResponseCodeEnum.NOT_HAVE_PERMISSION);
-//        }
+        if (!role.equals(RoleEnums.ROOT.getName()) && !articleDO.getAuthorId().equals(userId)) {
+            throw new BizException(ResponseCodeEnum.NOT_HAVE_PERMISSION);
+        }
     }
 
     /**
@@ -575,7 +618,7 @@ public class ArticleServiceImpl implements ArticleService {
                 .id(articleId)
                 .title(req.getTitle())
                 .cover(req.getCover())
-                .summary(req.getContent().substring(0, 20))
+                .summary(req.getSummary())
                 .updateTime(LocalDateTime.now())
                 .build();
         int count = articleMapper.updateById(articleDO);
